# projeto-site

./: 1.html  README.md  index - Copia - Copia.html  index - Copia.html  index.html  indicadores (1).html  indicadores.html  indicadores_2.html  indicadoresa.html
api/: df_indicadores_01_07_2026_12h13m57s68.json  df_indicadores_17_06_2026_07h30m10s89.json  df_indicadores_21_06_2026_13h06m57s26.json  df_indicadores_api_17_06_2026_12h33m06s04.json  df_indicadores_api_19_06_2026_09h12m34s49.json  df_indicadores_api_19_06_2026_17h39m26s84.json
bkp/: indicadores.html
estilos/: style.css
estudos/: ajax.html  ajax_info.txt  apache-php.sh  arquivo_mesclado.txt  bootstrap.html  docker-compose.yaml  estilo.css  executar_container.txt  exemplo.json  exemplo1.xml  exemplo2.xml  exemplo3.xml  getting-started.sh  hello-world.js  helloWorld.js  index-nginx.html  index.js  insert MongDB.txt  mongo.sh  (+19 more)
estudos/projetos-python/basico01/: .gitignore  classes.py  evolution_api.py  evolution_api_whatsapp_enviar.py  evolution_api_whatsapp_flask_receber.py  evolution_api_whatsapp_flask_receber_2.py  evolution_api_whatsapp_flask_receber_3.py  evolution_api_whatsapp_flask_receber_4.py  game_deepseek_r1.py  game_openai_o3_mini.py  group.py  group_controller.py  hello-world.py  hello.py  main.py  message_sandeco.py  projeto_site.py  pyproject.toml  task_scheduler.py  teste_grupos.py
estudos/projetos-python/basico01/basico/: hello.py  pyproject.toml
estudos/projetos-python/evolution_api/: README.md  pyproject.toml
estudos/projetos-python/evolution_api/src/evolution_api/: crew.py  main.py
(+73 files in other folders)
